Updated filesystems/ltfs-ltotape to 0.2
This release makes the ltotape driver thread-safe, as libltfs expects
it to be. This fixes a lot of problems because of race conditions on
SCSI I/O structures.

--- a/filesystems/ltfs-ltotape/patches/patch-Makefile.am
+++ b/filesystems/ltfs-ltotape/patches/patch-Makefile.am
@@ -1,14 +1,15 @@
-$NetBSD: patch-Makefile.am,v 1.1 2019/02/25 01:00:39 manu Exp $
+$NetBSD: patch-Makefile.am,v 1.2 2019/03/16 00:44:22 manu Exp $
 
 Make sure config.h is not copied at install time, we do not need it.
 
---- Makefile.am.orig	2019-02-24 06:56:41.830962689 +0000
-+++ Makefile.am	2019-02-24 06:56:46.505946016 +0000
-@@ -1,6 +1,6 @@
+--- Makefile.am.orig	2019-03-15 05:24:46.000000000 +0100
++++ Makefile.am	2019-03-15 09:59:08.473037879 +0100
+@@ -1,7 +1,7 @@
  ACLOCAL_AMFLAGS = -I m4
  
 -nobase_pkginclude_HEADERS = config.h
 +#nobase_pkginclude_HEADERS = config.h
  
- SUBDIRS = messages src/tape_drivers/netbsd/ltotape
+ GEN_DRV =
+ PLAT_DRV =
  
