--- a/devel/php-xdebug/Makefile
+++ b/devel/php-xdebug/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.21 2019/01/14 13:06:11 taca Exp $
+# $NetBSD: Makefile,v 1.22 2019/03/16 07:58:59 bsiegert Exp $
 #
 
 MODNAME=		xdebug
-PECL_VERSION=		2.6.1
+PECL_VERSION=		2.7.0
 CATEGORIES=		devel
 MASTER_SITES=		http://xdebug.org/files/
 EXTRACT_SUFX=		.tgz
@@ -14,7 +14,7 @@ LICENSE=		php
 
 PHP_ZEND_EXTENSION=	yes
 
-PHP_VERSIONS_ACCEPTED=  71 72
+PHP_VERSIONS_ACCEPTED=  71 72 73
 
 .include "../../lang/php/ext.mk"
 .include "../../mk/bsd.pkg.mk"
