--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1027 2019/03/13 18:00:02 adam Exp $
+# $NetBSD: Makefile,v 1.1028 2019/03/16 08:05:02 bsiegert Exp $
 #
 
 COMMENT=	Text processing utilities (does not include desktop publishing)
@@ -134,6 +134,7 @@ SUBDIR+=	cdif
 SUBDIR+=	chasen
 SUBDIR+=	chasen-base
 SUBDIR+=	cityhash
+SUBDIR+=	cjose
 SUBDIR+=	cldr-emoji-annotation
 SUBDIR+=	cmark
 SUBDIR+=	cmigemo
