--- a/x11/xosd/Makefile
+++ b/x11/xosd/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.13 2018/12/09 21:05:37 adam Exp $
+# $NetBSD: Makefile,v 1.14 2019/03/16 08:50:47 bsiegert Exp $
 
 .include "Makefile.common"
 
 COMMENT=		Library to display shaped text on your X display
+PKGREVISION=	1
 
 CONFIGURE_ENV+=		XOSD_XMMS_PLUGIN=NO
 CONFIGURE_ARGS+=	--disable-gdk_pixbuftest
