--- a/textproc/p5-Pod-Tests/Makefile
+++ b/textproc/p5-Pod-Tests/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.15 2018/08/22 09:46:54 wiz Exp $
+# $NetBSD: Makefile,v 1.16 2019/03/16 11:14:08 wen Exp $
 
-DISTNAME=		Pod-Tests-1.19
+DISTNAME=		Pod-Tests-1.20
 PKGNAME=		p5-${DISTNAME}
-PKGREVISION=		10
 CATEGORIES=		textproc perl5
 MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=Pod/}
 
