--- a/textproc/p5-XML-LibXML/Makefile
+++ b/textproc/p5-XML-LibXML/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.75 2018/08/22 09:47:07 wiz Exp $
+# $NetBSD: Makefile,v 1.76 2019/03/16 13:22:28 wen Exp $
 
-DISTNAME=	XML-LibXML-2.0132
+DISTNAME=	XML-LibXML-2.0134
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	textproc perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=XML/}
 
