--- a/shells/zsh/Makefile
+++ b/shells/zsh/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.91 2019/03/16 13:29:30 ryoon Exp $
+# $NetBSD: Makefile,v 1.92 2019/03/16 14:01:45 wiz Exp $
 
 DISTNAME=	zsh-5.7.1
+PKGREVISION=	1
 CATEGORIES=	shells
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=zsh/}
 EXTRACT_SUFX=	.tar.xz
@@ -18,9 +19,6 @@ TEXINFO_REQD=		4.0
 
 CONFIGURE_ARGS+=	--disable-gdbm
 CONFIGURE_ARGS+=	--enable-etcdir=${PKG_SYSCONFDIR:Q}
-# Stabilize zsh without jemalloc in libc
-# XXX Remove this and enable it in debug option. jemalloc in libc is stable now.
-CONFIGURE_ARGS+=	--enable-zsh-mem
 
 # Ensure we can find initscr(3) otherwise the curses module will not be built.
 CONFIGURE_ARGS+=        --with-term-lib="${BUILDLINK_LIBNAME.curses} ${BUILDLINK_LIBNAME.terminfo}"
