--- a/sysutils/ruby-listen/Makefile
+++ b/sysutils/ruby-listen/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.14 2017/09/19 16:34:55 taca Exp $
+# $NetBSD: Makefile,v 1.15 2019/03/16 14:12:37 taca Exp $
 
 DISTNAME=	listen-3.1.5
-PKGREVISION=	1
+PKGREVISION=	2
 PKGNAME=	${RUBY_PKGPREFIX}-${DISTNAME}
 CATEGORIES=	sysutils
 
@@ -11,7 +11,7 @@ COMMENT=	Listen to file modifications
 LICENSE=	mit
 
 DEPENDS+=	${RUBY_PKGPREFIX}-rb-fsevent>=0.9.4:../../devel/ruby-rb-fsevent
-DEPENDS+=	${RUBY_PKGPREFIX}-rb-inotify>=0.9.7:../../sysutils/ruby-rb-inotify
+DEPENDS+=	${RUBY_PKGPREFIX}-rb-inotify>=0.9.7:../../devel/ruby-rb-inotify
 DEPENDS+=	${RUBY_PKGPREFIX}-dep>=1.2:../../devel/ruby-dep
 
 RUBYGEM_OPTIONS+=	--format-executable
