--- a/meta-pkgs/mate/Makefile
+++ b/meta-pkgs/mate/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.21 2019/03/09 01:51:27 gutteridge Exp $
+# $NetBSD: Makefile,v 1.22 2019/03/16 17:58:22 gutteridge Exp $
 
 PKGNAME=	mate-${VERSION}
 CATEGORIES=	meta-pkgs
@@ -41,7 +41,7 @@ DEPENDS+=	mate-session-manager>=${VERSION}:../../x11/mate-session-manager
 DEPENDS+=	mate-settings-daemon>=${VERSION}:../../x11/mate-settings-daemon
 #DEPENDS+=	mate-system-monitor>=${VERSION}:../../sysutils/mate-system-monitor
 DEPENDS+=	mate-terminal>=${VERSION}:../../x11/mate-terminal
-DEPENDS+=	mate-themes>=${VERSION}:../../graphics/mate-themes
+DEPENDS+=	mate-themes>=3.22.19:../../graphics/mate-themes
 #DEPENDS+=	mate-user-share>=${VERSION}:../../net/mate-user-share
 DEPENDS+=	mate-utils>=${VERSION}:../../misc/mate-utils
 DEPENDS+=	mozo>=${VERSION}:../../x11/mozo
