--- a/devel/p5-Data-ObjectDriver/Makefile
+++ b/devel/p5-Data-ObjectDriver/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.5 2018/08/22 09:43:50 wiz Exp $
+# $NetBSD: Makefile,v 1.6 2019/03/16 23:23:31 wen Exp $
 
-DISTNAME=	Data-ObjectDriver-0.15
+DISTNAME=	Data-ObjectDriver-0.17
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	2
 CATEGORIES=	databases perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Data/}
 
