--- a/devel/p5-Data-UUID/Makefile
+++ b/devel/p5-Data-UUID/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.40 2018/08/22 09:43:51 wiz Exp $
+# $NetBSD: Makefile,v 1.41 2019/03/16 23:27:26 wen Exp $
 
-DISTNAME=	Data-UUID-1.221
+DISTNAME=	Data-UUID-1.224
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	3
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Data/}
 
