--- a/devel/p5-Test-Inter/Makefile
+++ b/devel/p5-Test-Inter/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.16 2018/08/22 09:44:46 wiz Exp $
+# $NetBSD: Makefile,v 1.17 2019/03/16 23:36:12 wen Exp $
 
-DISTNAME=	Test-Inter-1.07
+DISTNAME=	Test-Inter-1.09
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Test/}
 
