--- a/devel/p5-strictures/Makefile
+++ b/devel/p5-strictures/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.22 2018/08/22 09:44:58 wiz Exp $
+# $NetBSD: Makefile,v 1.23 2019/03/16 23:52:29 wen Exp $
 
-DISTNAME=	strictures-2.000005
+DISTNAME=	strictures-2.000006
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	devel perl5
-MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=../../authors/id/E/ET/ETHER/}
+MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=../../authors/id/H/HA/HAARG/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://search.cpan.org/dist/strictures/
