--- a/devel/p5-Sub-Quote/Makefile
+++ b/devel/p5-Sub-Quote/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.6 2018/08/22 09:44:40 wiz Exp $
+# $NetBSD: Makefile,v 1.7 2019/03/16 23:56:02 wen Exp $
 
-DISTNAME=	Sub-Quote-2.005001
+DISTNAME=	Sub-Quote-2.006003
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Sub/}
 
