--- a/devel/xfce4-dev-tools/Makefile
+++ b/devel/xfce4-dev-tools/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.41 2019/08/11 13:20:52 wiz Exp $
+# $NetBSD: Makefile,v 1.42 2019/08/17 18:24:55 gutteridge Exp $
 
-PKGREVISION= 2
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-VERSION=	4.13.0
+VERSION=	4.14.0
 DISTNAME=	xfce4-dev-tools-${VERSION}
 CATEGORIES=	devel
 MASTER_SITES=	http://archive.xfce.org/src/xfce/xfce4-dev-tools/${VERSION:R}/
