--- a/x11/libxfce4util/Makefile
+++ b/x11/libxfce4util/Makefile
@@ -1,11 +1,10 @@
-# $NetBSD: Makefile,v 1.56 2019/08/11 13:25:13 wiz Exp $
+# $NetBSD: Makefile,v 1.57 2019/08/17 18:32:33 gutteridge Exp $
 
-PKGREVISION= 2
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-DISTNAME=	libxfce4util-4.13.4
+DISTNAME=	libxfce4util-4.14.0
 CATEGORIES=	x11
-MASTER_SITES+=	http://archive.xfce.org/src/xfce/libxfce4util/4.13/
+MASTER_SITES+=	http://archive.xfce.org/src/xfce/libxfce4util/4.14/
 
 COMMENT=	Xfce basic library
 
