--- a/sysutils/xfce4-thunar/Makefile
+++ b/sysutils/xfce4-thunar/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.66 2019/08/11 13:23:20 wiz Exp $
+# $NetBSD: Makefile,v 1.67 2019/08/17 19:09:49 gutteridge Exp $
 
-PKGREVISION= 1
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-VERSION=	1.8.8
+VERSION=	1.8.9
 DISTNAME=	Thunar-${VERSION}
 PKGNAME=	xfce4-thunar-${VERSION}
 CATEGORIES=	sysutils
