--- a/x11/xfce4-session/Makefile
+++ b/x11/xfce4-session/Makefile
@@ -1,11 +1,10 @@
-# $NetBSD: Makefile,v 1.77 2019/08/11 13:25:20 wiz Exp $
+# $NetBSD: Makefile,v 1.78 2019/08/17 19:26:19 gutteridge Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-DISTNAME=		xfce4-session-4.13.3
-PKGREVISION=		3
+DISTNAME=		xfce4-session-4.14.0
 CATEGORIES=		x11
-MASTER_SITES+=		http://archive.xfce.org/src/xfce/xfce4-session/4.13/
+MASTER_SITES+=		http://archive.xfce.org/src/xfce/xfce4-session/4.14/
 
 HOMEPAGE=		https://docs.xfce.org/xfce/xfce4-session/start
 COMMENT=		Xfce session manager
