--- a/editors/xfce4-mousepad/Makefile
+++ b/editors/xfce4-mousepad/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.45 2019/08/11 13:20:57 wiz Exp $
+# $NetBSD: Makefile,v 1.46 2019/08/17 20:28:32 gutteridge Exp $
 
-PKGREVISION= 4
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-VERSION=	0.4.1
+VERSION=	0.4.2
 DISTNAME=	mousepad-${VERSION}
 PKGNAME=	xfce4-mousepad-${VERSION}
 CATEGORIES=	editors
@@ -13,6 +12,7 @@ HOMEPAGE=	http://users.xfce.org/~benny/xfce/apps.html
 COMMENT=	Xfce text editor
 
 .include "../../devel/glib2/schemas.mk"
+.include "../../devel/xfce4-conf/buildlink3.mk"
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
 .include "../../x11/gtksourceview3/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
