--- a/graphics/ristretto/Makefile
+++ b/graphics/ristretto/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.50 2019/08/11 13:21:16 wiz Exp $
+# $NetBSD: Makefile,v 1.51 2019/08/18 05:54:33 gutteridge Exp $
 #
 
-VERSION=	0.8.5
+VERSION=	0.10.0
 DISTNAME=	ristretto-${VERSION}
 EXTRACT_SUFX=	.tar.bz2
-PKGREVISION=	2
 CATEGORIES=	graphics
 MASTER_SITES=	http://archive.xfce.org/src/apps/ristretto/${VERSION:R}/
 
@@ -29,7 +28,7 @@ LDFLAGS.SunOS=		-lX11
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
 .include "../../sysutils/dbus-glib/buildlink3.mk"
-.include "../../x11/gtk2/buildlink3.mk"
+.include "../../x11/gtk3/buildlink3.mk"
 .include "../../devel/glib2/buildlink3.mk"
 .include "../../x11/libX11/buildlink3.mk"
 .include "../../x11/libxfce4util/buildlink3.mk"
