--- a/pkgtools/url2pkg/Makefile
+++ b/pkgtools/url2pkg/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.92 2019/08/11 13:22:37 wiz Exp $
+# $NetBSD: Makefile,v 1.93 2019/08/18 06:23:19 maya Exp $
 
-PKGNAME=	url2pkg-2.30
-PKGREVISION=	1
+PKGNAME=	url2pkg-2.31
 CATEGORIES=	pkgtools
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
