--- a/time/xfce4-datetime-plugin/Makefile
+++ b/time/xfce4-datetime-plugin/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.55 2019/08/11 13:24:13 wiz Exp $
+# $NetBSD: Makefile,v 1.56 2019/08/18 22:06:08 gutteridge Exp $
 
-PKGREVISION= 2
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-VERSION=	0.7.1
+VERSION=	0.8.0
 DISTNAME=	xfce4-datetime-plugin-${VERSION}
 CATEGORIES=	time
 MASTER_SITES=	http://archive.xfce.org/src/panel-plugins/xfce4-datetime-plugin/${VERSION:R}/
