--- a/sysutils/xfce4-diskperf-plugin/Makefile
+++ b/sysutils/xfce4-diskperf-plugin/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.55 2019/08/11 13:23:19 wiz Exp $
+# $NetBSD: Makefile,v 1.56 2019/08/18 22:13:44 gutteridge Exp $
 
-PKGREVISION= 8
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-DISTNAME=	xfce4-diskperf-plugin-2.6.1
+DISTNAME=	xfce4-diskperf-plugin-2.6.2
 CATEGORIES=	sysutils
 MASTER_SITES=	http://archive.xfce.org/src/panel-plugins/xfce4-diskperf-plugin/2.6/
 
