--- a/sysutils/xfce4-fsguard-plugin/Makefile
+++ b/sysutils/xfce4-fsguard-plugin/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.49 2019/08/11 13:23:19 wiz Exp $
+# $NetBSD: Makefile,v 1.50 2019/08/19 00:30:07 gutteridge Exp $
 
-PKGREVISION= 9
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-DISTNAME=	xfce4-fsguard-plugin-1.1.0
+DISTNAME=	xfce4-fsguard-plugin-1.1.1
 CATEGORIES=	sysutils
 MASTER_SITES=	http://archive.xfce.org/src/panel-plugins/xfce4-fsguard-plugin/1.1/
 
