--- a/sysutils/xfce4-genmon-plugin/Makefile
+++ b/sysutils/xfce4-genmon-plugin/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.40 2019/08/11 13:23:19 wiz Exp $
+# $NetBSD: Makefile,v 1.41 2019/08/19 01:09:47 gutteridge Exp $
 
-PKGREVISION= 5
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-VERSION=	4.0.1
+VERSION=	4.0.2
 DISTNAME=	xfce4-genmon-plugin-${VERSION}
 CATEGORIES=	sysutils
 MASTER_SITES=	http://archive.xfce.org/src/panel-plugins/xfce4-genmon-plugin/${VERSION:R}/
