--- a/x11/xfce4-places-plugin/Makefile
+++ b/x11/xfce4-places-plugin/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.46 2019/08/11 13:25:19 wiz Exp $
+# $NetBSD: Makefile,v 1.47 2019/08/19 01:24:14 gutteridge Exp $
 
-PKGREVISION= 2
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-VERSION=	1.8.0
+VERSION=	1.8.1
 DISTNAME=	xfce4-places-plugin-${VERSION}
 CATEGORIES=	x11
 MASTER_SITES=	http://archive.xfce.org/src/panel-plugins/xfce4-places-plugin/${VERSION:R}/
