--- a/net/xfce4-wavelan-plugin/Makefile
+++ b/net/xfce4-wavelan-plugin/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.53 2019/08/11 13:22:33 wiz Exp $
+# $NetBSD: Makefile,v 1.54 2019/08/19 04:58:11 gutteridge Exp $
 
-PKGREVISION= 8
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-DISTNAME=	xfce4-wavelan-plugin-0.6.0
+DISTNAME=	xfce4-wavelan-plugin-0.6.1
 CATEGORIES=	sysutils
 MASTER_SITES=	http://archive.xfce.org/src/panel-plugins/xfce4-wavelan-plugin/0.6/
 
