--- a/x11/xfce4-whiskermenu-plugin/Makefile
+++ b/x11/xfce4-whiskermenu-plugin/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.25 2019/08/11 13:25:20 wiz Exp $
+# $NetBSD: Makefile,v 1.26 2019/08/19 05:03:00 gutteridge Exp $
 
-VERSION=	2.3.2
+VERSION=	2.3.3
 DISTNAME=	xfce4-whiskermenu-plugin-${VERSION}
-PKGREVISION=	2
 CATEGORIES=	x11
 MASTER_SITES=	http://archive.xfce.org/src/panel-plugins/xfce4-whiskermenu-plugin/${VERSION:R}/
 EXTRACT_SUFX=	.tar.bz2
