--- a/wm/coma/Makefile
+++ b/wm/coma/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2019/08/16 14:07:27 fcambus Exp $
+# $NetBSD: Makefile,v 1.2 2019/08/19 12:31:23 fcambus Exp $
 
 DISTNAME=	coma-1.0
 CATEGORIES=	wm
@@ -10,6 +10,8 @@ COMMENT=	Keyboard driven tiling window manager
 LICENSE=	isc
 
 USE_LANGUAGES=	c99
+
+MAKE_ENV+=	MAN_DIR="${PREFIX}/${PKGMANDIR}"
 
 .include "../../x11/libX11/buildlink3.mk"
 .include "../../x11/libXft/buildlink3.mk"
