--- a/devel/wayland/Makefile
+++ b/devel/wayland/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.1 2019/08/18 16:05:12 nia Exp $
+# $NetBSD: Makefile,v 1.2 2019/08/19 12:50:23 nia Exp $
 
 DISTNAME=	wayland-1.17.0
+PKGREVISION=	1
 CATEGORIES=	devel
 MASTER_SITES=	https://wayland.freedesktop.org/releases/
 EXTRACT_SUFX=	.tar.xz
