threadingbuildingblocks: Fix PLIST on LP32 archs

--- a/parallel/threadingbuildingblocks/Makefile
+++ b/parallel/threadingbuildingblocks/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2024/11/14 22:21:21 wiz Exp $
+# $NetBSD: Makefile,v 1.17 2024/12/07 16:07:05 nia Exp $
 
 DISTNAME=	oneTBB-2022.0.0
 PKGNAME=	${DISTNAME:S/oneTBB-/threadingbuildingblocks-/}
@@ -27,6 +27,15 @@ TEST_ENV+=	DYLD_LIBRARY_PATH=${WRKSRC}/pkgsrc_relwithdebinfo
 BUILDLINK_TRANSFORM.SunOS+=	rm:-Wl,--version-script=${WRKSRC}/src/tbb/def/lin64-tbb.def
 BUILDLINK_TRANSFORM.SunOS+=	rm:-Wl,--version-script=${WRKSRC}/src/tbbmalloc/def/lin64-tbbmalloc.def
 BUILDLINK_TRANSFORM.SunOS+=	rm:-Wl,--version-script=${WRKSRC}/src/tbbmalloc_proxy/def/lin64-proxy.def
+
+.include "../../mk/bsd.prefs.mk"
+
+PLIST_VARS+=	lp32 lp64
+.if !empty(LP32PLATFORMS:@.PLAT.@${MACHINE_PLATFORM:M${.PLAT.}}@)
+PLIST.lp32=	yes
+.else
+PLIST.lp64=	yes
+.endif
 
 .include "../../devel/cmake/build.mk"
 .include "../../parallel/hwloc/buildlink3.mk"
