mail/opensmtpd-extras: fix typo

--- a/mail/opensmtpd-extras/Makefile
+++ b/mail/opensmtpd-extras/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2024/12/07 20:50:08 vins Exp $
+# $NetBSD: Makefile,v 1.12 2024/12/07 20:51:56 vins Exp $
 
 DISTNAME=		opensmtpd-extras-6.7.1_20241022
 CATEGORIES=		mail
@@ -13,7 +13,7 @@ COMMENT=	Addons for OpenSMTPD
 LICENSE=	isc
 
 CONFLICTS+=	opensmtpd>=7.6.0
-CONFLICTS=	+ opensmtpd-table-ldap-[0-9]*
+CONFLICTS+=	opensmtpd-table-ldap-[0-9]*
 CONFLICTS+=	opensmtpd-table-mysql-[0-9]*
 CONFLICTS+=	opensmtpd-table-passwd-[0-9]*
 CONFLICTS+=	opensmtpd-table-postgres-[0-9]*
