sysutils/yazi: update to 0.4.0
This is the biggest release ever, with 53 new features, 41 fixes, and 12 performance optimizations.

The main focus of this release is improving the plugin system, and we’ve made some adjustments to certain APIs based on real-world usage to better support future extensibility.
This release is a key step in moving the plugin system from BETA to stable!

This is a breaking change release, so please make sure to read: Migrating to Yazi v0.4.0

* Spotter
#1802 introduces the concept of "spotter". When you "spot" a file, a popup will show up with metadata about that file.
For example, it can display the mime type and size of a regular file, the dimensions and color space of an image, the duration and resolution of a video,
or the line count of a code file, etc.
You can easily copy this info with a simple keystroke or quickly swipe through files in the spot window.
What's even cooler is that users can set custom spotters for different file types, and plugin developers can use Lua APIs to build various spotters, just like with previewers!

* Support for Transparent Image Preview
Transparent image previews are now supported in #1556 (Thanks to @diegodorado), and it works across all 4 image backends Yazi supports (kitty graphics-protocol,
Inline images protocol, Sixel graphics format, Überzug++).

* Auto Switch Between Dark and Light Icons/Flavors Based on Terminal Background
#1946 adds dark/light mode support — Yazi will automatically detect your terminal's color scheme and choose the appropriate icon color and flavor.
In theme.toml, the [flavor] section now includes two new attributes, dark and light, to allow setting different flavors for light and dark modes.

* New ya emit and ya emit-to Subcommands to Emit Commands to a Specific Instance
Two new subcommands, ya emit and ya emit-to, have been added to the ya CLI tool in #1946.
They allow you to send commands from outside Yazi (e.g., from your shell) to run on a specific Yazi instance for b

--- a/sysutils/yazi/Makefile
+++ b/sysutils/yazi/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.15 2024/09/05 10:40:09 pin Exp $
+# $NetBSD: Makefile,v 1.16 2024/12/08 21:06:45 pin Exp $
 
-DISTNAME=	yazi-0.3.3
+DISTNAME=	yazi-0.4.0
 CATEGORIES=	sysutils
 MASTER_SITES=	${MASTER_SITE_GITHUB:=sxyazi/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
@@ -12,9 +12,9 @@ LICENSE=	mit
 
 .include "cargo-depends.mk"
 
-#RUST_REQ=	1.79.0
+#RUST_REQ=	1.81.0
 #Upstream does not state the required MSRV.
-#This package is confirmed to build with Rust 1.79.0 on amd64
+#This package is confirmed to build with Rust 1.81.0 on amd64
 USE_LANGUAGES+=	c c++
 USE_TOOLS+=	gmake pkg-config
 
@@ -25,11 +25,13 @@ do-install:
 		${DESTDIR}${PREFIX}/bin
 	${INSTALL_PROGRAM} ${WRKSRC}/target/release/ya \
 		${DESTDIR}${PREFIX}/bin
-	${INSTALL_DATA} ${WRKSRC}/yazi-config/preset/keymap.toml \
+	${INSTALL_DATA} ${WRKSRC}/yazi-config/preset/keymap-default.toml \
 		${DESTDIR}${PREFIX}/share/examples/yazi
-	${INSTALL_DATA} ${WRKSRC}/yazi-config/preset/theme.toml \
+	${INSTALL_DATA} ${WRKSRC}/yazi-config/preset/theme-dark.toml \
 		${DESTDIR}${PREFIX}/share/examples/yazi
-	${INSTALL_DATA} ${WRKSRC}/yazi-config/preset/yazi.toml \
+	${INSTALL_DATA} ${WRKSRC}/yazi-config/preset/theme-light.toml \
+		${DESTDIR}${PREFIX}/share/examples/yazi
+	${INSTALL_DATA} ${WRKSRC}/yazi-config/preset/yazi-default.toml \
 		${DESTDIR}${PREFIX}/share/examples/yazi
 
 .include "../../lang/rust/cargo.mk"
