sysutils/swtpm: Update to 0.10.0
Changelog:
version 0.10.0:
   - swtpm:
     - Requires libtpms v0.10.0
     - Display tpmstate-opt-lock as a new capability
     - Add support for lock option parameter to tpmstate option
     - nvstore_linear: Add support for file-backend locking
     - Remove broken logic to check for neither dir nor file backend
     - Use ptm_cap_n to build PTM_GET_CAPABILITY response
     - Define a structure to return PTM_GET_CAPABILITY result
     - Implement --print-info to run TPMLIB_GetInfo with flags
     - Support --profile fd=<fd> to read profile from file descriptor
     - Support --profile file=<filename> to read profile from file
     - Ignore remove-disabled parameter on non-'custom' profile
     - Check for good entropy source in chroot environment
     - Implement a check for HMAC+sha1 for testing future restriction
     - Implement function to check whether a crypto algorithm is disabled
     - Print cmdarg-print-profiles as part of capabilities
     - Check whether SHA1 signature support is disabled in profile
     - Use TPMLIB_WasManufactured to check whether profile was applied
     - Determine whether OpenSSL needs to be configured (FIPs, SHA1 signature)
     - Add support for --print-profiles option
     - Print profile names as part of capabilities JSON
     - Display new capability to allow setting a profile
     - Add support for --profile option to set a profile on TPM 2
   - swtpm_setup:
     - Comment flags for storage primary key and deprecate --create-spk
     - Implement --print-profiles to display all profile
     - Add profile entries to swtpm_setup.conf written by swtpm_setup
     - Add support for --profile-name option
     - Accept profiles with name starting with 'custom:'
     - Support default profile from file in swtpm_setup.conf
     - Support --profile-file-fd to read profile from file descriptor
     - Support --profile-file <file> to read profile from file
     - Always log the active profile
     - Impl

--- a/sysutils/swtpm/Makefile
+++ b/sysutils/swtpm/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.11 2024/11/14 22:21:47 wiz Exp $
+# $NetBSD: Makefile,v 1.12 2024/12/09 13:48:39 ryoon Exp $
 
 GITHUB_PROJECT=	swtpm
 GITHUB_TAG=	v${PKGVERSION_NOREV}
-DISTNAME=	swtpm-0.7.0
-PKGREVISION=	9
+DISTNAME=	swtpm-0.10.0
 CATEGORIES=	sysutils
 MASTER_SITES=	${MASTER_SITE_GITHUB:=stefanberger/}
 
@@ -29,7 +28,7 @@ USE_LANGUAGES+=		c
 BUILDLINK_TRANSFORM+=	rm:-Werror
 
 USE_LIBTOOL=		yes
-USE_TOOLS=		automake bash gawk gmake pkg-config
+USE_TOOLS=		automake bash gawk gmake gsed pkg-config
 GNU_CONFIGURE=		yes
 CONFIGURE_SCRIPT=	autogen.sh
 CONFIGURE_ARGS+=	--without-cuse
@@ -37,8 +36,10 @@ CONFIGURE_ARGS+=	--with-tss-user=${REAL_ROOT_USER}
 CONFIGURE_ARGS+=	--with-tss-group=${REAL_ROOT_GROUP}
 # Avoid `error: stack protector not protecting local variables: variable length buffer [-Werror=stack-protector]` errors
 CONFIGURE_ARGS+=	--disable-hardening
+CONFIGURE_ARGS+=	--disable-tests
 
 REPLACE_BASH+=		samples/*
+REPLACE_BASH+=		tests/*
 
 EGDIR=		${PREFIX}/share/examples/swtpm
 CONF_FILES+=	${EGDIR}/swtpm-localca.conf \
@@ -50,6 +51,10 @@ CONF_FILES+=	${EGDIR}/swtpm_setup.conf \
 
 OWN_DIRS_PERMS+=	${VARBASE}/lib/swtpm-localca \
 			${REAL_ROOT_USER} ${REAL_ROOT_GROUP} 0755
+
+post-install:
+	# Do not install tests.
+	${RM} -rf ${DESTDIR}${PREFIX}/libexec
 
 .include "../../security/gnutls/buildlink3.mk"
 .include "../../security/libtasn1/buildlink3.mk"
