mariadb1011: Update to 10.11.10
                         MariaDB 10.11.10 Release Notes

Notable Items

  Storage Engines

    InnoDB

     * Fix attempt to read outside the bounds of the file: ./ibdata1
       (MDEV-34453)
     * Fix MariaDB crash with SIGILL because the OS does not support AVX512
       (MDEV-34565)
     * Fix deadlock caused by lock_rec_unlock_unmodified() (MDEV-34690)
     * Fix duplicate key error in table 'mysql.innodb_table_stats'
       (MDEV-34207)
     * Fix possible adaptive hash index corruption with ALTER TABLE...IMPORT
       TABLESPACE and FULLTEXT SEARCH (MDEV-35059)
     * XA prepare now correctly releases unmodified records in non-blocking
       mode (MDEV-34466)
     * Fix contention between secondary index UPDATE and purge due to large
       innodb_purge_batch_size (MDEV-34515)
          * New default of 127 for innodb_purge_batch_size (previously 1000).
     * Fix redundant page lookups that hurt performance (MDEV-34791)

    Spider

     * Fix server crash when calling spider UDF after aria_encrypt_tables is
       enabled (MDEV-34682)
     * SELECT MIN on Spider table no longer returns more rows than expected
       (MDEV-26345)
     * Fix Spider group by handler wrong result on order by aggregate
       (MDEV-29546)

    S3

     * Fix Storage Engine S3 that caused 500 error when using Huawai Cloud S3
       and possibly other S3 providers (MDEV-34867)
          * A new option s3-provider has been added. s3-provider=Huawai needs
            to be set for Huawai Cloud S3

  Optimizer

     * Fix crash caused by query containing constant having clause
       (MDEV-23983)
     * Fix assertion with optimizer_join_limit_pref_ratio and 1-table select
       (MDEV-35072)

  Data Definition - Alter Table

     * Modification of the column now correctly checks foreign key constraint
       (MDEV-34392)
     * Fix incorrect NULL value handling for instantly dropped BLOB columns
       (MDEV-35122)

  Galera

     * Galera updated to 

--- a/databases/mariadb1011-client/Makefile.common
+++ b/databases/mariadb1011-client/Makefile.common
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile.common,v 1.15 2024/08/25 06:18:29 wiz Exp $
+# $NetBSD: Makefile.common,v 1.16 2024/12/10 18:23:08 nia Exp $
 #
 # used by databases/mariadb1011-client/Makefile
 # used by databases/mariadb1011-server/Makefile
 # used by databases/mariadb1011-embedded/Makefile
 
-DISTNAME=	mariadb-10.11.9
+DISTNAME=	mariadb-10.11.10
 CATEGORIES=	databases
 MASTER_SITES=	https://archive.mariadb.org/${DISTNAME}/source/
 
