--- a/databases/mariadb1011-server/Makefile
+++ b/databases/mariadb1011-server/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.20 2024/11/14 22:19:01 wiz Exp $
+# $NetBSD: Makefile,v 1.21 2024/12/10 18:23:08 nia Exp $
 
 PKGNAME=	${DISTNAME:S/-/-server-/}
-PKGREVISION=	5
 COMMENT=	MariaDB 10.11, a free MySQL compatible database (server)
 
 CONFLICTS=	mysql-server-[0-9]*
