--- a/databases/mariadb106-client/Makefile
+++ b/databases/mariadb106-client/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.23 2024/11/14 22:19:02 wiz Exp $
+# $NetBSD: Makefile,v 1.24 2024/12/10 22:36:36 nia Exp $
 
 PKGNAME=	${DISTNAME:S/-/-client-/}
-PKGREVISION=	3
 COMMENT=	MariaDB 10.6, a free MySQL compatible database (client)
 
 CONFLICTS=	mysql-client-[0-9]*
