--- a/databases/mariadb106-server/Makefile
+++ b/databases/mariadb106-server/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.40 2024/11/14 22:19:02 wiz Exp $
+# $NetBSD: Makefile,v 1.41 2024/12/10 22:36:36 nia Exp $
 
 PKGNAME=	${DISTNAME:S/-/-server-/}
-PKGREVISION=	4
 COMMENT=	MariaDB 10.6, a free MySQL compatible database (server)
 
 CONFLICTS=	mysql-server-[0-9]*
