mariadb105: Update to 10.5.27
                         MariaDB 10.5.27 Release Notes

Notable Items

  Storage Engines

    InnoDB

     * Fix MariaDB crash with SIGILL because the OS does not support AVX512
       (MDEV-34565)
     * Fix innodb.innodb-lock-inherit-read_commited failure with timeout
       (MDEV-33106)

    Spider

     * Fix server crash when calling spider UDF after aria_encrypt_tables is
       enabled (MDEV-34682)
     * SELECT MIN on Spider table no longer returns more rows than expected
       (MDEV-26345)
     * Fix Spider group by handler wrong result on order by aggregate
       (MDEV-29546)

  Optimizer

     * Fix crash caused by query containing constant having clause
       (MDEV-23983)

  Data Definition - Alter Table

     * Modification of the column now correctly checks foreign key constraint
       (MDEV-34392)
     * Fix incorrect NULL value handling for instantly dropped BLOB columns
       (MDEV-35122)

  Galera

     * Galera updated to 26.4.20
     * Fix server crash when setting wsrep_cluster_address after adding
       invalid value to wsrep_allowlist table (MDEV-31173)
     * Fix INSERT...SELECT' on MyISAM table suddenly replicated by alera
       (MDEV-34647)
     * Fix galera_ssl_reload failure with warning message (MDEV-32778)
     * When InnoDB gets an assertion failure, WSREP layer is now handled
       gracefully (MDEV-32363)

  Backup

     * Recovery now correctly notes some log corruption (MDEV-34802)
     * Can now selectively restore sequences using innodb tables from backup
       (MDEV-32350)

  General

     * mariadbd no longer hangs on startup when --init-file target does not
       exist (MDEV-34814)
     * LOAD DATA INFILE with geometry data no longer fails (MDEV-34883)
     * Fix heap-use-after-free in group_concat with compressed or GIS columns
       (MDEV-16699)
     * Trigger now works correctly with bulk update (MDEV-34718)
     * Fix assertion failure in find_producing_item upon a query from a view


--- a/databases/mariadb105-client/Makefile.common
+++ b/databases/mariadb105-client/Makefile.common
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile.common,v 1.33 2024/08/25 06:18:29 wiz Exp $
+# $NetBSD: Makefile.common,v 1.34 2024/12/11 07:55:52 nia Exp $
 #
 # used by databases/mariadb105-client/Makefile
 # used by databases/mariadb105-server/Makefile
 
-DISTNAME=	mariadb-10.5.26
+DISTNAME=	mariadb-10.5.27
 CATEGORIES=	databases
 MASTER_SITES=	https://archive.mariadb.org/${DISTNAME}/source/
 
