py-fonttools: updated to 4.55.3
4.55.3 (released 2024-12-10)

- [Docs] fill out ttLib table section
- [feaLib] More efficient inline format 4 lookups

4.55.2 (released 2024-12-05)

- [Docs] update Sphinx config
- [designspaceLib] Allow axisOrdering to be set to zero
- [feaLib] Don’t modify variable anchors in place

4.55.1 (released 2024-12-02)

- [ttGlyphSet] Support VARC CFF2 fonts
- [DecomposedTransform] Document and implement always skewY == 0
- [varLib] "Fix" cython iup issue?
- Cython minor refactor

--- a/fonts/py-fonttools/Makefile
+++ b/fonts/py-fonttools/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.110 2024/11/17 09:35:48 wiz Exp $
+# $NetBSD: Makefile,v 1.111 2024/12/11 08:34:30 adam Exp $
 
-DISTNAME=	fonttools-4.55.0
+DISTNAME=	fonttools-4.55.3
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	fonts python
 MASTER_SITES=	${MASTER_SITE_PYPI:=F/FontTools/}
