devel/py-mercurial: Disable rusty tests.
If we're not building the rusty parts of Mercurial, it doesn't make
sense for the tests to pick up whether $PREFIX/bin/cargo happens to
be installed to decide whether to run the rusty tests of Mercurial.

(If we do enable the rusty parts of Mercurial, whether via options or
unconditionally, we should run the rusty tests too under the same
conditions.)

No revbump because no change to the build -- only to tests.

--- a/devel/py-mercurial/Makefile
+++ b/devel/py-mercurial/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.102 2024/12/11 23:27:33 wiz Exp $
+# $NetBSD: Makefile,v 1.103 2024/12/11 23:32:49 riastradh Exp $
 #
 # Changelog sometimes at: https://www.mercurial-scm.org/wiki/WhatsNew
 
@@ -36,6 +36,7 @@ USE_TOOLS+=		bash:test
 
 TEST_TARGET=		tests
 TEST_MAKE_FLAGS+=	PYTHON=${PYTHONBIN} TESTFLAGS=${_MAKE_JOBS:Q}
+TEST_MAKE_FLAGS+=	CARGO=/dev/null
 
 post-build:
 	${RUN} cd ${WRKSRC} && ${BUILD_MAKE_CMD} build-chg
