appstream: Requires msgfmt, fix localedir.

--- a/devel/appstream/Makefile
+++ b/devel/appstream/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2024/12/09 11:37:31 adam Exp $
+# $NetBSD: Makefile,v 1.14 2024/12/12 18:45:04 jperkin Exp $
 
 DISTNAME=	appstream-1.0.4
 CATEGORIES=	devel
@@ -16,9 +16,10 @@ TOOL_DEPENDS+=	docbook-xsl-[0-9]*:../../textproc/docbook-xsl
 
 USE_LANGUAGES=		c c++
 USE_PKGLOCALEDIR=	yes
-USE_TOOLS+=		itstool pkg-config
+USE_TOOLS+=		itstool msgfmt pkg-config
 
 MESON_ARGS+=	-Dapidocs=false
+MESON_ARGS+=	-Dlocaledir=${PKGLOCALEDIR}/locale
 MESON_ARGS+=	-Dsystemd=false
 # for running a tool during the build
 MAKE_ENV+=	LD_LIBRARY_PATH=${WRKSRC}/output/src
